--- a/login.css
+++ b/login.css
@@ -627,3 +627,35 @@ button {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
+.alert-message {
+  border-radius: 0.5rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.bg-red-50 {
+  background-color: #fef2f2;
+}
+
+.text-red-700 {
+  color: #b91c1c;
+}
+
+.text-red-500 {
+  color: #ef4444;
+}
+
+.bg-green-50 {
+  background-color: #f0fdf4;
+}
+
+.text-green-700 {
+  color: #15803d;
+}
+
+.text-green-500 {
+  color: #22c55e;
+}
